Products Overview Screen

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "React-Native-Shop-App",
+    "name": "Shop App",
     "slug": "React-Native-Shop-App",
     "version": "1.0.0",
     "orientation": "portrait",
