--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.3",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
