--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.0",
     "react-navigation-header-buttons": "^6.2.1",
     "react-navigation-stack": "^2.10.3",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "react-native-screens": "~2.15.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
