--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
+    "expo-linear-gradient": "^9.0.0",
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
     "react": "16.13.1",
